--- a/www/pages/front.html
+++ b/www/pages/front.html
@@ -59,7 +59,7 @@
     <ion-tabs class="tabs-striped tab-light">
       
 
-      <ion-tab  icon="ion-android-home" title="Home" href="#/front/talk">
+      <ion-tab  icon="ion-android-home"  badge="(notifications | filter:{seen:false}).length || 0" badge-style="badge-oran-alt" title="Home" href="#/front/talk">
         <ion-nav-view name="front-talk"></ion-nav-view>
       </ion-tab>
 
@@ -77,10 +77,10 @@
     </ion-tab>
 
 
-
+<!-- 
       <ion-tab title="Activity" badge="(notifications | filter:{seen:false}).length || 0" badge-style="badge-oran-alt" icon="ion-ios-bell" href="#/front/notification">
         <ion-nav-view name="front-notification"></ion-nav-view>
-      </ion-tab>
+      </ion-tab> -->
 
 
 
