--- a/www/pages/front/talk.html
+++ b/www/pages/front/talk.html
@@ -14,12 +14,11 @@
                         <!-- <button ng-click="change_mode()" class="button button-sm button-clear" ng-class="!settings.dark_mode ? '':'grey'">
                             <span class="icon" ng-class="!settings.dark_mode ? 'ion-ios-moon dark':'ion-ios-sunny'"></span>
                         </button> -->
-                        <button ui-sref="front.notifications" class="button button-sm button-clear">
-                        
+                        <button ui-sref="front.notifications" class="button button-sm button-clear" ng-class="!settings.dark_mode ? '':'grey'">
                             <div ng-show="(notifications | filter:{seen:false}).length > 0" class="badge badge-energized" style="position: absolute;">
                                 {{(notifications | filter:{seen:false}).length || 0}}
                             </div>
-                            <span class="icon ion-ios-bell"></span>
+                            <span class="icon ion-ios-bell dark"></span>
                         </button>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     </ion-nav-buttons>
