updated UI and improved performance

--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,8 @@
     <link rel="stylesheet" href="css/tracker.css"/>
     <link rel="apple-touch-icon" href="icon.png"/>
     <link rel="stylesheet" href="css/ionic-segment/dist/ionic.segment.css"/>
+    <link rel="stylesheet" href="../node_modules/feather-icons/dist/feather.css"/>
+
     <link href="css/material-icons.css" rel="stylesheet"/>
     <div ng-switch="settings.dark_mode">
       <div ng-switch-when="true">
@@ -40,7 +42,7 @@
 <script src="cordova.js"></script>
 <script src="lib/ngStorage.min.js"></script>
 <script src="lib/ionic-native/ionic.native.min.js"></script>
-<script src="lib/ionic-native/ionic.native.js"></script>
+<script src="lib/ionic-native/=.native.js"></script>
 <script src="js/jquery-3.1.1.js"></script>
 <script src="js/ng-file-upload-shim.js"></script>
 <script src="js/ng-file-upload.js"></script>
@@ -49,6 +51,7 @@
 <script src="js/moment.js"></script>
 <script src="js/moment-with-locales.js"></script>
 <script src="js/lazy-scroll.js"></script>
+<!-- <script src="engine/app.min.js"></script> -->
 <script src="engine/App.js"></script>
 <script src="engine/Library.js"></script>
 <script src="engine/API.js"></script>
