--- a/www/pages/chat.html
+++ b/www/pages/chat.html
@@ -4,7 +4,7 @@
           <div ng-if="chat.members.length > 0" style="margin-top:8px !important;"> 
             <div ng-if="chat.members.length <= 2"  style="margin-top:-5px !important;" class="profile-photo2" ui-sref="aprofile({id:chatter(chat).t_id})" ng-style="{'background-image':'url('+media+chatter(chat).photo+')'}"></div>
             <div style="margin-left: 30px !important;margin-top:8px !important;" ng-if="chat.members.length > 2">
-              <div class="group-photo2" ng-repeat="member in chat.members | limitTo:3" ng-style="{'background-image':'url('+media+member.user.photo+')'}"></div>
+              <div class="group-photo2" ng-repeat="member in chat.members | limitTo:3 track by $index" ng-style="{'background-image':'url('+media+member.user.photo+')'}"></div>
             </div>
             <h4 ui-sref="aprofile({id:chatter(chat).t_id})">{{chat.members.length > 2 ? (chat.title || 'Group'):chatter(chat).full_name}} <ion-spinner ng-if="playing_message.casting" icon="lines" class="now_spinner"></ion-spinner> </h4>
          </div>
@@ -38,7 +38,7 @@
       </div>
   
       <div ng-if="messages.length > 0">
-            <div ng-include="'components/message.html'" ng-repeat="cast in messages | unique:'date_created' | orderBy:'date_created'"></div>
+            <div ng-include="'components/message.html'" ng-repeat="cast in messages | unique:'date_created' | orderBy:'date_created' track by $index"></div>
       </div>
 
       <div class="gap"></div>
