--- a/www/pages/edit_cast.html
+++ b/www/pages/edit_cast.html
@@ -54,7 +54,7 @@
                     <h5>Mention people on your cast</h5>
                     <small>(optional)</small>
                 </div>
-                <div class="tag pill pill-dark" ng-repeat="mention in mentions">
+                <div class="tag pill pill-dark" ng-repeat="mention in mentions track by $index">
                   <b>@{{mention.user_name}}</b> &nbsp;<i ng-click="remove_mention(mention)" class="ion ion-close"></i>
                 </div>
                 <div class="padding">
