--- a/www/pages/requests.html
+++ b/www/pages/requests.html
@@ -40,7 +40,7 @@
                 </div>
   
   
-            <div ng-include="'components/request.html'" ng-repeat="request in requests">
+            <div ng-include="'components/request.html'" ng-repeat="request in requests track by $index">
             </div>
     
                                 
