--- a/www/pop-ups/air_cast.html
+++ b/www/pop-ups/air_cast.html
@@ -23,7 +23,7 @@
               <small>Checking for conversations...</small>
           </div>
           <div ng-hide="fetching_replies">
-            <div ng-include ng-repeat="cast in cast_replies | limitTo:100:convo_track" src="'components/track-item.html'"></div>   
+            <div ng-include ng-repeat="cast in cast_replies | limitTo:100:convo_track track by $index" src="'components/track-item.html'"></div>   
           </div>
          </div>
 
@@ -36,7 +36,7 @@
 
             <ion-list class="{{text_color}} transparent">
             
-                <div ng-include ng-repeat="cast in playlist | limitTo:30:(track+1)" src="'components/track-item.html'"></div>
+                <div ng-include ng-repeat="cast in playlist | limitTo:30:(track+1) track by $index" src="'components/track-item.html'"></div>
                   
             </ion-list>
 
