fixed sturborn bug

--- a/www/index.html
+++ b/www/index.html
@@ -23,8 +23,8 @@
     <link rel="stylesheet" href="css/sidebar.css"/>
     <link rel="stylesheet" href="css/tracker.css"/>
     <link rel="apple-touch-icon" href="icon.png"/>
-    <link rel="stylesheet" href="css/ionic-segment/dist/ionic.segment.css"/>
-    <link rel="stylesheet" href="../node_modules/feather-icons/dist/feather.css"/>
+    <link rel="stylesheet" href="lib/ionic-segment/dist/ionic.segment.css"/>
+    <!-- <link rel="stylesheet" href="../node_modules/feather-icons/dist/feather.css"/> -->
 
     <link href="css/material-icons.css" rel="stylesheet"/>
     <div ng-switch="settings.dark_mode">
@@ -37,9 +37,10 @@
       </div>
     </div>
 <script src="js/socket.io.min.js"  integrity="sha384-7EyYLQZgWBi67fBtVxw60/OWl1kjsfrPFcaU0pp0nAh+i8FD068QogUvg85Ewy1k" crossorigin="anonymous"></script>
-<script src="js/ionic.bundle.js"></script>
+<script src="lib/angular/angular.js"></script>
+<script src="lib/ionic/js/ionic.bundle.js"></script>
 <script src="lib/ngCordova/dist/ng-cordova.js"></script>
-<script src="cordova.js"></script>
+
 <script src="lib/ngStorage.min.js"></script>
 <script src="lib/ionic-native/ionic.native.min.js"></script>
 <script src="lib/ionic-native/=.native.js"></script>
